# swi-metobs-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build-push.yml
app/: main.py
app/api/v3/: router.py
app/api/v3/endpoints/: forecast.py  forecast_rasters.py  obs_latest.py  observation_historical.py  observation_latest.py  spheres.py  stations_info.py  stations_informations.py  timeseries.py
app/models/: forecast.py  spheres.py  stations.py  stations_data.py
app/utils/: error.py  path.py
tests/: conftest.py
tests/integration/: test_forecast.py  test_historical_observations.py  test_latest_observations.py  test_sphere_endpoints.py  test_station_status.py
tests/unit/: test_models.py  test_sphere_models.py  test_sphere_utils.py  test_utils_path.py
