[project]
name = "swi-metobs-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask[dataframe]>=2025.12.0",
    "fastapi>=0.122.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=9.8.0",
    "jinja2>=3.1.6",
]

test = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[dependency-groups]
dev = [
    "dask[complete]>=2025.12.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "jinja2>=3.1.6",
    "pip>=25.3",
    "ruff>=0.14.10",
]

test = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]
